src/QAbstractSlider.h


// 
// This file has been automatically generated by RaQt_maker V0.0.7.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC int QWQAbstractSliderorientation(void * obj);
EXTERNC void QWQAbstractSlidersetMinimum(void * obj, int32_t  arg1);
EXTERNC int32_t QWQAbstractSliderminimum(void * obj);
EXTERNC void QWQAbstractSlidersetMaximum(void * obj, int32_t  arg1);
EXTERNC int32_t QWQAbstractSlidermaximum(void * obj);
EXTERNC void QWQAbstractSlidersetSingleStep(void * obj, int32_t  arg1);
EXTERNC int32_t QWQAbstractSlidersingleStep(void * obj);
EXTERNC void QWQAbstractSlidersetPageStep(void * obj, int32_t  arg1);
EXTERNC int32_t QWQAbstractSliderpageStep(void * obj);
EXTERNC void QWQAbstractSlidersetTracking(void * obj, int8_t  enable);
EXTERNC int8_t QWQAbstractSliderhasTracking(void * obj);
EXTERNC void QWQAbstractSlidersetSliderDown(void * obj, int8_t  arg1);
EXTERNC void QWQAbstractSlidersetSliderPosition(void * obj, int32_t  arg1);
EXTERNC int32_t QWQAbstractSlidersliderPosition(void * obj);
EXTERNC void QWQAbstractSlidersetInvertedAppearance(void * obj, int8_t  arg1);
EXTERNC int8_t QWQAbstractSliderinvertedAppearance(void * obj);
EXTERNC void QWQAbstractSlidersetInvertedControls(void * obj, int8_t  arg1);
EXTERNC int8_t QWQAbstractSliderinvertedControls(void * obj);
EXTERNC int32_t QWQAbstractSlidervalue(void * obj);
EXTERNC void QWQAbstractSlidersetValue(void * obj, int32_t  arg1);
EXTERNC void QWQAbstractSlidersetOrientation(void * obj, int  arg1);
EXTERNC void QWQAbstractSlidersetRange(void * obj, int32_t  min, int32_t  max);